--- a/capacitate.html
+++ b/capacitate.html
@@ -20,15 +20,18 @@
         <div class="media-body acerca-de">
 
           <p>
-            Desde la <a href='http://www.ate-ministeriodetrabajo.blogspot.com.ar/' target='_blank'>Junta Interna de ATE</a> del Ministerio de Trabajo hemos preparado una actividad de capacitación acerca de temas que son comunes a todos los puestos a ser concursados. En esta sección podrás acceder al material que utilizamos para impartir dicha actividad.
+            Desde la <a href='http://www.ate-ministeriodetrabajo.blogspot.com.ar/' target='_blank'>Junta Interna de ATE</a> del Ministerio de Trabajo hemos preparado una actividad de capacitación acerca de temas que son comunes a todos los puestos a ser concursados. A través de esta biblioteca digital ponemos en línea el curso completo para todos los compañer@s que no pudieron estar presentes.
+
           </p>
           <div class="logo-sistemas">
-            <img src="img/capacitacion/capacitacion_01.jpg"/>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE" frameborder="0" allowfullscreen></iframe>
+            <!-- <img src="img/capacitacion/capacitacion_01.jpg"/> -->
           </div>
           <br />
 
           <p>
             Los temas que abarca la capacitación incluyen:
+
 
             <dl>
               <dt><h2>Elementos del acto administrativo</h2></dt>
@@ -37,34 +40,34 @@
               <br />
               <ul>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=WYVvaSj31SU' target='_blank'>1. Presentación Noción de Derecho y de Sujetos en el Derecho</a> <i><small>(6.20 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=WYVvaSj31SU&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>1. Presentación Noción de Derecho y de Sujetos en el Derecho</a> <i><small>(6.20 minutos)</small></i>
                 </li>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=K5z4yUyyboA' target='_blank'>2. Normas y conductas</a> <i><small>(8:26 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=K5z4yUyyboA&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>2. Normas y conductas</a> <i><small>(8:26 minutos)</small></i>
                 </li>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=0B5di7xKhY8' target='_blank'>3. Decreto Ley de Procedimientos Administrativos</a> <i><small>(4:43 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=0B5di7xKhY8&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>3. Decreto Ley de Procedimientos Administrativos</a> <i><small>(4:43 minutos)</small></i>
                 </li>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=TA6t9q9CGhY' target='_blank'>4. Elementos del Acto Administrativo</a> <i><small>(37:58 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=TA6t9q9CGhY&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>4. Elementos del Acto Administrativo</a> <i><small>(37:58 minutos)</small></i>
                 </li>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=0XSt4TXujmM' target='_blank'>5. Procedimiento y Forma</a> <i><small>(7:21 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=0XSt4TXujmM&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>5. Procedimiento y Forma</a> <i><small>(7:21 minutos)</small></i>
                 </li>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=y6zp8qO7_Y4' target='_blank'>6. Derecho Subjetivo Interés Legítimo Precariedad</a> <i><small>(6:31 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=y6zp8qO7_Y4&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>6. Derecho Subjetivo Interés Legítimo Precariedad</a> <i><small>(6:31 minutos)</small></i>
                 </li>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=n0UhAT2VfKM' target='_blank'>7. Elementos del Acto Administrativo Causa Forma</a> <i><small>(3:39 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=n0UhAT2VfKM&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>7. Elementos del Acto Administrativo Causa Forma</a> <i><small>(3:39 minutos)</small></i>
                 </li>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=8DhjpIkfVKU' target='_blank'>8. Razonabilidad y Legalidad</a> <i><small>(5:37 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=8DhjpIkfVKU&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>8. Razonabilidad y Legalidad</a> <i><small>(5:37 minutos)</small></i>
                 </li>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=pvALZgMq7h8' target='_blank'>9. Actos regulares e irregulares</a> <i><small>(12:58 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=pvALZgMq7h8&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>9. Actos regulares e irregulares</a> <i><small>(12:58 minutos)</small></i>
                 </li>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=2z9Ic5rnYcM' target='_blank'>10. Caperucita Administrativa</a> <i><small>(6:38 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=2z9Ic5rnYcM&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>10. Caperucita Administrativa</a> <i><small>(6:38 minutos)</small></i>
                 </li>
               </ul>
             </dl>
@@ -76,37 +79,37 @@
               <br />
               <ul>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=kZo5Kd9Sozk' target='_blank'>1. Atributos</a> <i><small>(6:07 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=kZo5Kd9Sozk&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>1. Atributos</a> <i><small>(6:07 minutos)</small></i>
                 </li>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=lfmluCJ27VI' target='_blank'>2. Requisitos del Empleo Público</a> <i><small>(10:00 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=lfmluCJ27VI&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>2. Requisitos del Empleo Público</a> <i><small>(10:00 minutos)</small></i>
                 </li>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=lVr8BVYVW5w' target='_blank'>3. Derechos del Empleado Público</a> <i><small>(11:02 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=lVr8BVYVW5w&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>3. Derechos del Empleado Público</a> <i><small>(11:02 minutos)</small></i>
                 </li>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=rmHPRvJstw4' target='_blank'>4. Derechos de los Contratados</a> <i><small>(5:31 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=rmHPRvJstw4&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>4. Derechos de los Contratados</a> <i><small>(5:31 minutos)</small></i>
                 </li>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=HJJB9_xAf7M' target='_blank'>5. Remuneración del Empleo Público</a> <i><small>(20:28 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=HJJB9_xAf7M&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>5. Remuneración del Empleo Público</a> <i><small>(20:28 minutos)</small></i>
                 </li>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=vkyyPgnJh84' target='_blank'>6. Licencias, justificaciones y franquicias</a> <i><small>(5:33 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=vkyyPgnJh84&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>6. Licencias, justificaciones y franquicias</a> <i><small>(5:33 minutos)</small></i>
                 </li>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=bnpgIx8hQMU' target='_blank'>6.1 Sanciones disciplinarias</a> <i><small>(8:11 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=bnpgIx8hQMU&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>6.1 Sanciones disciplinarias</a> <i><small>(8:11 minutos)</small></i>
                 </li>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=wRcTotwmQWE' target='_blank'>7. Situación de Revista</a> <i><small>(7:07 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=wRcTotwmQWE&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>7. Situación de Revista</a> <i><small>(7:07 minutos)</small></i>
                 </li>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=NJB-f2dBGno' target='_blank'>8. Comisiones Paritarias</a> <i><small>(6:10 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=NJB-f2dBGno&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>8. Comisiones Paritarias</a> <i><small>(6:10 minutos)</small></i>
                 </li>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=0zU1Vok2HJs' target='_blank'>9. Ficción directa</a> <i><small>(1:42 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=0zU1Vok2HJs&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>9. Ficción directa</a> <i><small>(1:42 minutos)</small></i>
                 </li>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=ItUkCLNgbBQ' target='_blank'>10. Finalización del Empleo Público</a> <i><small>(13:25 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=ItUkCLNgbBQ&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>10. Finalización del Empleo Público</a> <i><small>(13:25 minutos)</small></i>
                 </li>
               </ul>
             </dl>
@@ -118,7 +121,7 @@
               <br />
               <ul>
                 <li>
-                  <a href='https://www.youtube.com/watch?v=q0qUjtMwADE' target='_blank'>Convenio Colectivo Sistema Nacional de Empleo Público - SINEP</a> <i><small>(16:06 minutos)</small></i>
+                  <a href='https://www.youtube.com/watch?v=q0qUjtMwADE&feature=youtu.be&list=PLkikXAYrDj58tjl4J4cQjYPYjv_2SASlE' target='_blank'>Convenio Colectivo Sistema Nacional de Empleo Público - SINEP</a> <i><small>(16:06 minutos)</small></i>
                 </li>
               </ul>
             </dl>
