--- a/sidebar.html
+++ b/sidebar.html
@@ -7,7 +7,7 @@
       &nbsp;&nbsp;<span class="label label-info">{{root.childrenCount}} archivos</span>
       </a>
       <a class="list-group-item" href="#/capacitate">Capacita<i>ATE</i><i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="#/evaluate">Evalu<i>ATE</i><i class="fa fa-chevron-right pull-right"></i></a>
+      <!-- <a class="list-group-item" href="#/evaluate">Evalu<i>ATE</i><i class="fa fa-chevron-right pull-right"></i></a> -->
       <a class="list-group-item" href="#/preguntas">Preguntas frecuentes <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/links">Links de interés <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/afiliate">Afili<i>ATE</i><i class="fa fa-chevron-right pull-right"></i></a>
